tests/paczka1/fuzzy1/47199728.err
Error in line 5: E1x23Z1f A939 4,3
Error in line 2: v0HmZ S467 60,6
Error in line 25: v0HmZ S467 81,94
Error in line 20: v0HmZ A877 34,9
